[gd_scene load_steps=7 format=3 uid="uid://ce0v4imrrwj0o"]

[ext_resource type="Script" path="res://Camera.gd" id="1_ah1fm"]
[ext_resource type="Script" path="res://ui/Spawnlist.gd" id="2_g71ax"]
[ext_resource type="PackedScene" uid="uid://c3y7dhtrmiuug" path="res://objects/weapons/pistol/Pistol.tscn" id="3_7rxcs"]
[ext_resource type="PackedScene" uid="uid://dxnvl2c4qn347" path="res://objects/characters/human/Human.tscn" id="4_fdygx"]
[ext_resource type="PackedScene" uid="uid://bmwwl0dljdi44" path="res://objects/characters/snake/Snake.tscn" id="5_n0jlk"]
[ext_resource type="PackedScene" uid="uid://c5xok86cifw0j" path="res://objects/misc/ball.tscn" id="6_2xatn"]

[node name="Camera" type="Camera2D"]
zoom = Vector2(1.2, 1.2)
script = ExtResource("1_ah1fm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 124.0
grow_vertical = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Spawn list" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_g71ax")
pistol_scene = ExtResource("3_7rxcs")
human_scene = ExtResource("4_fdygx")
snake_scene = ExtResource("5_n0jlk")
ball_scene = ExtResource("6_2xatn")

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list"]
layout_mode = 2
text = "Spawn list"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list"]
layout_mode = 2
columns = 3

[node name="Pistol" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list/GridContainer"]
layout_mode = 2
text = "Pistol"

[node name="Ball" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list/GridContainer"]
layout_mode = 2
text = "Ball"

[node name="Human" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list/GridContainer"]
layout_mode = 2
text = "Human"

[node name="Snake" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list/GridContainer"]
layout_mode = 2
text = "Snake"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Tips" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spawn Tip" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Tips"]
layout_mode = 2
text = "· Press E to spawn an object"
autowrap_mode = 2

[node name="Freeze Tip" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Tips"]
layout_mode = 2
text = "· Press F to freeze an object"
autowrap_mode = 2

[node name="Interact Tip" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Tips"]
layout_mode = 2
text = "· Press R to interact with an object"
autowrap_mode = 2

[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list/GridContainer/Pistol" to="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list" method="_on_pistol_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list/GridContainer/Ball" to="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list" method="_on_ball_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list/GridContainer/Human" to="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list" method="_on_human_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list/GridContainer/Snake" to="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Spawn list" method="_on_snake_pressed"]
